add image , title

--- a/Edit-1/main.html
+++ b/Edit-1/main.html
@@ -6,14 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Kru Gift</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="menu">
         <h1 class="home">Home</h1> 
     </div>
 
+    <div class="title">
+         <h2 class="title-1" >บริหารเวลายังไงให้มีประสิทธิภาพและคุ้มค่า ?</h2>
+    </div>
+
     <div class="message">
-            <h2 class="title-1" >บริหารเวลายังไงให้มีประสิทธิภาพและคุ้มค่า ?</h2>
             <p>เวลาของทุกคนมีเท่ากันวันละ 24 ชั่วโมง แต่หลายคนมักชอบพูดว่า “ไม่มีเวลา” สาเหตุส่วนหนึ่งมาจากการบริหารเวลาแบบผิด ๆ นั่นเอง 
             จึงทำให้ชีวิตยุ่งวุ่นวาย และทำงานอย่างไม่มีประสิทธิภาพเท่าที่ควร
             มาดู 6 วิธี ที่จะทำให้คุณบริหารจัดการเวลาได้อย่างถูกต้อง มีเวลาในชีวิตเพิ่มมากขึ้น และทำให้ชีวิตง่ายขึ้นอีกด้วย
@@ -31,7 +36,6 @@
             <img src="D:\WebDev\IMG\bed_boy_wake.png" alt="" >
         </center>
         
-
         <div class="g2">
             <p class="t2">2.จัดตารางเวลา</p>
             <p class="p2">
