--- a/Edit-1/main.html
+++ b/Edit-1/main.html
@@ -14,15 +14,20 @@
         <h1 class="home">Home</h1> 
     </div>
 
+    <div class="rong">
+
+    </div>
+
     <div class="title">
          <h2 class="title-1">บริหารเวลายังไงให้มีประสิทธิภาพและคุ้มค่า ?</h2>
+         <p class="title-2">เวลาของทุกคนมีเท่ากันวันละ 24 ชั่วโมง แต่หลายคนมักชอบพูดว่า “ไม่มีเวลา” สาเหตุส่วนหนึ่งมาจากการบริหารเวลาแบบผิด ๆ นั่นเอง 
+            จึงทำให้ชีวิตยุ่งวุ่นวาย และทำงานอย่างไม่มีประสิทธิภาพเท่าที่ควร
+            มาดู 6 วิธี ที่จะทำให้คุณบริหารจัดการเวลาได้อย่างถูกต้อง มีเวลาในชีวิตเพิ่มมากขึ้น และทำให้ชีวิตง่ายขึ้นอีกด้วย
+        </p>
     </div>
 
     <div class="message">
-            <p>เวลาของทุกคนมีเท่ากันวันละ 24 ชั่วโมง แต่หลายคนมักชอบพูดว่า “ไม่มีเวลา” สาเหตุส่วนหนึ่งมาจากการบริหารเวลาแบบผิด ๆ นั่นเอง 
-            จึงทำให้ชีวิตยุ่งวุ่นวาย และทำงานอย่างไม่มีประสิทธิภาพเท่าที่ควร
-            มาดู 6 วิธี ที่จะทำให้คุณบริหารจัดการเวลาได้อย่างถูกต้อง มีเวลาในชีวิตเพิ่มมากขึ้น และทำให้ชีวิตง่ายขึ้นอีกด้วย
-            </p>
+            
         
         <div class="g1">
             <p class="t1">1.ตื่นนอนแต่เช้า</p>
