--- a/Edit-1/main.html
+++ b/Edit-1/main.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="menu">
-        <h1 class="home">Home</h1> 
+        <h1 class="home"></h1> 
     </div>
 
     <div class="rong">
