--- a/Edit-1/main.html
+++ b/Edit-1/main.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div id="start"></div>
     <div class="menu">
-        <h1 class="home">Home</h1> 
+        <a class="home" href="#start">Home</a>
     </div>
 
     <div class="rong">
@@ -94,5 +95,6 @@
                 <img class="img" src="chilling.png" alt="" width="58%">
             </center>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
